# app/Http/Controllers/Api/V1/User/UsersController.php
@@ -200,4 +200,35 @@ class UsersController extends Controller
         $user->setCompanyProfile($request);
         return response()->json(['user' => $user->getAccountInfo()], 201);
     }
+
+    /**
+     * @OA\Get(
+     *     path="/user/companies/search",
+     *     summary="Поиск компаний",
+     *     tags={"User"},
+     *     @OA\Parameter(name="companyName", required=true, in="query", description="Начало имени компании(мин длинна 2 символа))"),
+     *     @OA\Response(
+     *      response=200,
+     *      description="Возвращает список наденных компаний",
+     *      @OA\JsonContent()
+     *     ),
+     * )
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function findCompanies(Request $request)
+    {
+        $validator = \Validator::make($request->all(), [
+            'companyName' => 'required|string|min:2',
+        ]);
+        if ($validator->fails()) {
+            return response()->json(['errors' => $validator->errors()->getMessages()], 400);
+        }
+
+        $value = $request->get('companyName') . '%';
+        $companies = CompanyProfile::where('full_name', 'LIKE', $value)
+            ->limit(20)
+            ->get();
+
+        return response()->json(['items' => $companies]);
+    }
 }
